[workspace]
resolver = "2"
members = ["mips_app", "mips_lib"]

[profile.dev]
debug = true
## The emulator is not really usable without optims so we force them even for
## debug builds
overflow-checks = true

[profile.release]
debug = false
# Disable parallel code generation. Increases build time but can improve
# performance
codegen-units = 1
lto = true
panic = 'abort'
incremental = false
overflow-checks = false
opt-level = 3