[package]
name = "mips_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayref = "0.3"
bitfield = "0.19.0"
flexbuffers = "25.2.10"
fnv = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
sha = "1.0"
stacker = "0.1.20"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.cdimage]
git = "https://github.com/simias/cdimage"
branch = "master"
features = ["serde"]

[features]
# Enable debugger support
debugger = []
# Enable many CDC debug messages
cdc_verbose = []
